--- a/orders/templates/admin/orders/order/detail.html
+++ b/orders/templates/admin/orders/order/detail.html
@@ -35,7 +35,7 @@
         </tr>
         <tr>
             <th>Total amount</th>
-            <td>${{ order.get_total_cost }}</td>
+            <td>${{ order.get_total_cost|floatformat:2 }}</td>
         </tr>
         <tr>
             <th>Status</th>
@@ -63,8 +63,12 @@
                     </tr>
                 {% endfor %}
                 <tr class="total">
+                    <td colspan="3">Discount</td>
+                    <td class="num">${{ order.get_total_discount|floatformat:2 }}</td>
+                </tr>
+                <tr class="total">
                     <td colspan="3">Total</td>
-                    <td class="num">${{ order.get_total_cost }}</td>
+                    <td class="num">${{ order.get_total_cost|floatformat:2 }}</td>
                 </tr>
             </tbody>
         </table>
