--- a/orders/templates/orders/order/pdf.html
+++ b/orders/templates/orders/order/pdf.html
@@ -33,9 +33,17 @@
             <td class="num">${{ item.get_cost }}</td>
           </tr>
         {% endfor %}
+        {% if order.coupon %}
+          <tr class="subtotal">
+              <td colspan="3">Discount</td>
+              <td class="num neg">
+                 - ${{ order.get_total_discount|floatformat:2 }}
+              </td>
+          </tr>
+        {% endif %}
         <tr class="total">
           <td colspan="3">Total</td>
-          <td class="num">${{ order.get_total_cost }}</td>
+          <td class="num">${{ order.get_total_cost|floatformat:2 }}</td>
         </tr>
       </tbody>
     </table>
